Fix article list cover shift

--- a/public/theme/styles.css
+++ b/public/theme/styles.css
@@ -238,7 +238,6 @@ a {
   border-bottom: 1px solid var(--purple);
   box-sizing: border-box;
   margin: auto;
-  padding: 15px 30px;
   text-align: center;
   width: 320px;
 }
@@ -258,6 +257,7 @@ a {
 
 .article-list .article-title {
   margin-top: 10px;
+  padding: 15px 30px;
 }
 
 .article-list .article-title-link,
@@ -285,6 +285,7 @@ a {
   color: var(--purple);
   font-family: var(--serif);
   margin: 1em 0 0;
+  padding: 15px 30px;
 }
 
 .articles-pagination {
